Added slide with working bb-paginate directive embedded

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="app">
 
 	<head>
 		<meta charset="utf-8">
@@ -24,6 +24,8 @@
 		<script>
 			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
 		</script>
+
+		<link rel="stylesheet" href="lib/css/bootstrap-pagination.css" />
 
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
@@ -96,6 +98,21 @@
                 </ol>
 				</section>
 
+        <section>
+                <h2>Case Study: Pagination</h2>
+
+                <div ng-controller="myCtrl">
+
+                  <div class='span4' style="width:1100px"
+                            bb-paginate="search.meta.pagination"
+                            paginator="StandardPaginator"
+                            on-page-select="selectPage(pageNumber)"
+                            paginate-beacon ></div>
+
+                </div>
+
+        </section>
+
 				<section data-remote="ui-pagination.html"></section>
 
 				<section>
@@ -156,6 +173,12 @@ function linkify( selector ) {
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/jquery.scrollTo.js"></script>
+		<script src="js/angular.js"></script>
+		<script src="js/underscore.js"></script>
+		<script src="js/bb-paginate.js"></script>
+		<script src="js/paginate-app.js"></script>
 
 		<script>
 
