--- a/index.html
+++ b/index.html
@@ -135,38 +135,11 @@
 				<section data-remote='override-factories.html'>
 				</section>
 
-
-				<section data-markdown>
-					<script type="text/template">
-					</script>
+				<section data-remote='test-pojos.html'>
 				</section>
 
-				<section data-markdown>
-					<script type="text/template">
-					</script>
+				<section data-remote='offer-hooks.html'>
 				</section>
-				<section>
-					<h2>Pretty Code</h2>
-					<pre><code data-trim contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
-					</code></pre>
-					<p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-				</section>
-
-
 			</div>
 
 		</div>
