Add closing slide and code reference

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <img class='fragment' src='facets-alpha-sorted.png'/>
                 </div>
                 <div>
-                    <img class='fragment' src='standard-pagination.png'/>
-                    <img class='fragment' src='terminal-pagination.png'/>
+                    <img class='fragment' src='autocomplete-company.png'/>
+                    <img class='fragment' src='autocomplete-agency.png'/>
                 </div>
 				</section>
 
@@ -126,7 +126,11 @@
                     <li class="fragment">Factories can be subclassed using Angular Injector</li>
                     <li class="fragment">Most tests written for Plain Old Javascript Objects</li>
                     <li class="fragment">Offer hooks instead of configuration options</li>
+
                 </ol>
+                <br>
+                <br>
+                <h4 class='fragment'>Follow along: <a href='http://github.com/wadetandy/bb-paginate'>github.com/wadetandy/bb-paginate</a></h4>
 				</section>
 
 				<section data-remote='thin-directive.html'>
@@ -140,6 +144,21 @@
 
 				<section data-remote='offer-hooks.html'>
 				</section>
+
+                <section>
+                <h2>We're hiring</h2>
+                <h2><a href='http://jobs.bloomberg.com'>jobs.bloomberg.com</a></h2>
+
+                <br>
+                <h2>Find Our Code</h2>
+                <h2><a href='http://github.com/wadetandy/bb-paginate'>github.com/wadetandy/bb-paginate</a></h2>
+
+                <br>
+                <h2>Follow Us</h2>
+                <h2><a href='http://github.com/chazchandler'>github.com/chazchandler</a></h2>
+                <h2><a href='http://github.com/wadetandy'>github.com/wadetandy</a></h2>
+                <h2><a href='http://twitter.com/wadetandy'>@wadetandy</a></h2>
+                </section>
 			</div>
 
 		</div>
