load remote plugin before reveal

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
 					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/remote.js', async: true, condition: function() { return !!document.querySelector('[data-remote]'); } }
+					{ src: 'plugin/remote.js', condition: function() { return !!document.querySelector('[data-remote]'); } }
 				]
 			});
 
